# cat-slideshow-pwa-demo

./: .gitignore  LICENSE  README.md
.cursor/rules/: back-end-project-rules.mdc  front-end-project-rules.mdc  global-rules.mdc
.github/scripts/: build-apprunner-config.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml
back-end/cat-slideshow-api/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  apprunner.yaml  docker-compose.yml  env.example  pyproject.toml
back-end/cat-slideshow-api/.navi/: navi.cheat
back-end/cat-slideshow-api/alembic/: README  env.py  script.py.mako
back-end/cat-slideshow-api/alembic/versions/: 0001_create_todos.py  6d90ae4cfe49_remove_todo_table_remove_image_urls_.py  791b5de9a19f_make_cat_id_required_on_slideshows.py  97fa84655eb5_add_slideshow_and_cat_table.py  9a1b2c3d4e5f_add_user_id_to_cat_and_slideshow.py  f02634167133_add_user_table.py
back-end/cat-slideshow-api/src/app/: api.py  auth.py  db.py  main.py  models.py  settings.py
back-end/cat-slideshow-api/src/app/api/: __init__.py  auth.py  cat_images.py  cats.py  slideshows.py  todos.py
back-end/cat-slideshow-api/src/app/crud/: __init__.py  base.py  cat.py  slideshow.py  todo.py  user.py
back-end/cat-slideshow-api/src/app/models/: __init__.py  base.py  cat.py  slideshow.py  todo.py  user.py
back-end/cat-slideshow-api/tests/: test_cats.py  test_slideshows.py  test_todos.py
back-end/docs/: auth-plan.md  tech-stack.md
front-end/cat-slideshow/: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pwa-assets.config.ts  tailwind.config.js  (+1 more)
(+59 files in other folders)
