[project]
name = "fastapi-sqlmodel-starter"
version = "0.2.0"
description = "FastAPI + SQLModel + Postgres + Pytest + Alembic starter"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "sqlmodel>=0.0.22",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.4",
  "alembic>=1.13",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "asgi-lifespan>=2.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.uv]
